Correction d'orthographe, mise en rouge de la limitation de vitesse dans le village (visibilité de l'information)

--- a/static/css/css_accueil.css
+++ b/static/css/css_accueil.css
@@ -124,3 +124,9 @@
     color: white;
     text-decoration: none;
 }
+
+/************************** DIVERS ************************/
+.limit30 {
+    font-weight: bold;
+    color: red;
+}
